:construction: Spacing issue

--- a/wp-content/themes/commence/style.css
+++ b/wp-content/themes/commence/style.css
@@ -24,7 +24,7 @@ section{
   margin-right: 30px;
 }
 
-.elementor-widget-wrap {
+.elementor-column-gap-default>.elementor-column>.elementor-element-populated {
   padding: 10px 0;
 }
 
